--- a/Material-Glass/src/main/assets/overlays/com.android.systemui/res/values/dimens.xml
+++ b/Material-Glass/src/main/assets/overlays/com.android.systemui/res/values/dimens.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="status_bar_expanded_header_elevation">1dp</dimen>
-    <dimen name="notification_material_rounded_rect_radius">2dp</dimen>
-    <dimen name="notification_material_shadow_rounded_rect_radius">
-        @dimen/notification_material_rounded_rect_radius
-    </dimen>
+    <dimen name="recents_task_view_rounded_corners_radius">20.0dip</dimen>
+    <dimen name="notification_material_rounded_rect_radius">20.0dip</dimen>
+    <dimen name="notification_material_rounded_rect_radius_negative">-20.0dip</dimen>
+    <dimen name="borderless_button_radius">5.0dip</dimen>
 </resources>
