--- a/Material-Glass/src/main/assets/overlays/com.android.settings/res/values/dimens.xml
+++ b/Material-Glass/src/main/assets/overlays/com.android.settings/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="dashboard_padding_end">10.0dip</dimen>
     <dimen name="dashboard_padding_top">10.0dip</dimen>
     <dimen name="dashboard_padding_bottom">10.0dip</dimen>
+    <dimen name="suw_card_corner_radius">5.0dip</dimen>
 </resources>
