--- a/Material-Glass/src/main/assets/overlays/com.android.systemui/res/drawable/volume_dialog_background.xml
+++ b/Material-Glass/src/main/assets/overlays/com.android.systemui/res/drawable/volume_dialog_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/backgroundt" />
-    <corners android:bottomLeftRadius="20dp" android:bottomRightRadius="20dp"
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp" />
+    <corners android:bottomLeftRadius="@dimen/notification_material_rounded_rect_radius" android:bottomRightRadius="@dimen/notification_material_rounded_rect_radius"
+        android:topLeftRadius="@dimen/notification_material_rounded_rect_radius"
+        android:topRightRadius="@dimen/notification_material_rounded_rect_radius" />
 </shape>
